crates/ars-components/src/utility/swap/snapshots/ars_components__utility__swap__tests__swap_on_content_hidden.snap
---
source: crates/ars-components/src/utility/swap.rs
expression: "snapshot_attrs(&off.connect(&|_| {}).on_content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "on-content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "swap",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Hidden,
            Bool(
                true,
            ),
        ),
    ],
    styles: [],
}
