crates/ars-components/src/utility/swap/snapshots/ars_components__utility__swap__tests__swap_on_content_visible.snap
---
source: crates/ars-components/src/utility/swap.rs
expression: "snapshot_attrs(&on.connect(&|_| {}).on_content_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "on-content",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "swap",
            ),
        ),
    ],
    styles: [],
}
